--- a/about/index.html
+++ b/about/index.html
@@ -139,7 +139,7 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Hi 👋, I am Abhishek, a husband with two beautiful daughters. When I am not goofing around with them I spend my time working as a software engineer, trying to keep up to date with the new developments on the backend engineering side of things.</p>
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Hi 👋, I am Abhishek, a husband with two beautiful daughters. When I am not goofing around with them I spend my time working as a software engineer, trying to keep up to date with the new developments in the tech world.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
