--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          
+          Learning Go has always been on my todo list for a few years. It has been gaining in popularity recently and is one of the top languages developers want to learn in 2020. Or maybe the Go song inspired me 😆
+  I started with the Tour of GO to learn the basic syntax and data structures. Its a great learning resource with a few exercises thrown in. My main motive was to learn about Concurrency in GO, which is where GO seems to score with developers.
         </div>
           <a href="https://abhishekkh.github.io/post/learn-go/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
